--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "victory": "^37.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
